# learning

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 08e995d2be47_create_users_table.py  6ae9cf9e29ba_create_users_table.py  7a8ad2834563_update_id.py  7e1b7083bf77_all_models.py
src/: dependencies.py  exceptions.py  logging_config.py  main.py
src/db/: db_context.py  factory.py  settings.py
src/middleware/: authentication.py  correlation_context.py  correlation_id_middleware.py
src/models/: index.py
src/repository/implementations/PostgreSQL/: postgres_AuthRepository.py  postgres_CourseRepository.py  postgres_EnrollmentRepository.py  postgres_LessonRepository.py  postgres_ProgressRepository.py  postgres_Repository.py  postgres_UserRepository.py  utils.py
src/repository/implementations/PostgreSQL/models/: ORM_User.py  index.py
src/repository/interfaces/: interface_AuthRepository.py  interface_CourseRepository.py  interface_EnrollmentRepository.py  interface_LessonRepository.py  interface_ProgressRepository.py  interface_Repository.py  interface_UserRepository.py
src/routes/: AuthController.py  CourseController.py  EnrollmentController.py  LessonController.py  ProgessController.py  UserController.py  utils.py
src/schemas/: AuthSchemas.py  CourseSchemas.py  EnrollmentSchemas.py  LessonSchemas.py  ProgressSchemas.py  UserSchemas.py
src/service/: AuthService.py  CourseService.py  EnrollmentService.py  LessonService.py  ProgressService.py  Service.py  UserService.py
