[project]
name = "userservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.1",
    "pydantic>=2.11.3",
    "sqlalchemy",
    "pydantic-settings",
    "botocore>=1.40.30",
    "asyncpg>=0.30.0",
    "alembic",
    "psycopg2-binary==2.9.10"
]
